--- a/public/css/admin.styl
+++ b/public/css/admin.styl
@@ -77,17 +77,17 @@ label
 		-webkit-box-shadow 0 3px 1px -2px rgba(0,0,0,.2)
 	img
 		width 100%
-		max-width 120px
+		max-width 80px
+		margin-top 70px
 	.js-header--left
 		flexCenter()
 		width 100%
 		max-width 300px
 		justify-content flex-start
 		p
-			font-family $bold
-			margin-left 10px
-			font-size 16px
-			line-height 16px
+			font-size 18px
+			line-height 20px
+			color #000000
 		img
 			&.js-partner
 				margin-right 10px
@@ -99,8 +99,8 @@ label
 		justify-content flex-end
 		text-align right
 		p
-			font-size 20px
-			line-height 18px
+			font-size 18px
+			line-height 20px
 		a
 			width 100%
 			text-decoration none
