--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -360,7 +360,7 @@ strong
 .js-fondo
 	absolute()
 	background url(../img/fondo/fondo.jpg) no-repeat bottom center
-	background-size cover
+	background-size cover !important
 	width 100%
 	height 500px
 	z-index -1
@@ -371,6 +371,25 @@ strong
 		z-index 0
 		height 500px
 		opacity .2
+	&.fondo1
+		background url(../img/fondo/fondo.jpg) no-repeat bottom center
+	&.fondo2
+		background url(../img/fondo/fondo-home.jpg) no-repeat bottom center
+#home
+	height 500px
+	position relative
+	.owl-stage-outer
+	.owl-stage
+		height 500px
+	.owl-carousel
+		absolute()
+		width 100%
+		z-index 1
+		max-width 100%
+		.owl-item
+			height 500px
+			.item
+				height 500px
 footer
 	background-color #FFFFFF
 	color #333333
